--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.1",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0"
   },
