--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "axios": "^0.27.2",
+    "masonry": "^0.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-masonry-component": "^6.3.0",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0"
